Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1614

Test failure on test suite replay-single, subtest test_44a, LBUG on MDS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0
    • Lustre 2.3.0
    • None
    • 3
    • 4196

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/9724906a-c6b3-11e1-a378-52540035b04c.

      The sub-test test_44a failed with the following error:

      test failed to respond and timed out

      19:48:01:Lustre: DEBUG MARKER: == replay-single test 44a: race in target handle connect ============================================= 19:48:00 (1341456480)
      19:48:02:LustreError: 32708:0:(lproc_ptlrpc.c:666:ptlrpc_lprocfs_rd_timeouts()) ASSERTION( nob < 128 ) failed: 
      19:48:02:LustreError: 32708:0:(lproc_ptlrpc.c:666:ptlrpc_lprocfs_rd_timeouts()) LBUG
      19:48:02:Pid: 32708, comm: lctl
      19:48:02:
      19:48:02:Call Trace:
      19:48:02: [<ffffffffa0e85905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      19:48:02: [<ffffffffa0e85f17>] lbug_with_loc+0x47/0xb0 [libcfs]
      19:48:02: [<ffffffffa05b452c>] ptlrpc_lprocfs_rd_timeouts+0x2ec/0x330 [ptlrpc]
      19:48:02: [<ffffffffa03d04a3>] lprocfs_fops_read+0xf3/0x1f0 [obdclass]
      19:48:02: [<ffffffff811db3ee>] proc_reg_read+0x7e/0xc0
      19:48:02: [<ffffffff81177155>] vfs_read+0xb5/0x1a0
      19:48:02: [<ffffffff810d4932>] ? audit_syscall_entry+0x272/0x2a0
      19:48:02: [<ffffffff81177291>] sys_read+0x51/0x90
      19:48:02: [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
      19:48:02:
      19:48:02:Kernel panic - not syncing: LBUG
      19:48:02:Pid: 32708, comm: lctl Not tainted 2.6.32-220.17.1.el6_lustre.x86_64 #1
      19:48:02:Call Trace:
      19:48:02: [<ffffffff814eccea>] ? panic+0x78/0x143
      19:48:02: [<ffffffffa0e85f6b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      19:48:02: [<ffffffffa05b452c>] ? ptlrpc_lprocfs_rd_timeouts+0x2ec/0x330 [ptlrpc]
      19:48:03: [<ffffffffa03d04a3>] ? lprocfs_fops_read+0xf3/0x1f0 [obdclass]
      19:48:03: [<ffffffff811db3ee>] ? proc_reg_read+0x7e/0xc0
      19:48:03: [<ffffffff81177155>] ? vfs_read+0xb5/0x1a0
      19:48:03: [<ffffffff810d4932>] ? audit_syscall_entry+0x272/0x2a0
      19:48:03: [<ffffffff81177291>] ? sys_read+0x51/0x90
      19:48:03: [<ffffffff8100b0f2>] ? system_call_fastpath+0x16/0x1b
      

            liang Liang Zhen (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: